--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-html-table-to-excel": "^2.0.0",
