set ufcc image and add dynamic logo favicon and titleline

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Elvee",
-  "name": "Elvee Jewels Pvt. Ltd. ",
+  "short_name": "diamondtine",
+  "name": "diamondtine ",
   "icons": [
     {
       "src": "favicon.ico",
